# deepcisOS

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  run-qemu  rust-toolchain  x86_64-deepcis_os.json
.cargo/: config
boot/src/: main.rs
mikanos_usb/: Cargo.toml
mikanos_usb/cxx_src/: cxx_support.h  logger.cpp  sabios_support.cpp
mikanos_usb/cxx_src/usb/: memory.hpp
mikanos_usb/src/: lib.rs
src/: console.rs  cxx_support.rs  desktop.rs  error.rs  font.rs  framebuffer.rs  graphics.rs  log.rs  main.rs  memory.rs  mouse.rs  paging.rs  pci.rs  prelude.rs  xhc.rs
