[package]
name = "deepcis_os"
version = "0.1.0"
authors = ["tai <bsns.123456.clg@gmail.com>"]
edition = "2018"
build = "build.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.10.9"
conquer-once = {version = "0.3.2", default-features = false}
spin = "0.9.0"
static_assertions = "1.1.0"
x86_64 = "0.14.1"
arrayvec = {version = "0.7.0" ,default-features = false}
bit_field = "0.10.1"

[workspace]
members = ["boot"]


[package.metadata.bootloader]
map-physical-memory = true